# axcp-spec

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTERPRISE_NOTICE.md  LICENSE  LICENSE.enterprise  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  generate_proto.ps1  go.mod  go.sum  go.work  go.work.sum  requirements.txt  rust-project.json  tradephantom-gpg.asc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci-enterprise.yml  ci.yml  enterprise-ci.yml  enterprise-helm.yml  rust-ci.yml  rust-publish.yml
axcp-extension-praisonai/: README.md
axcp-extension-praisonai/.github/workflows/: ci.yml
axcp-extension-praisonai/examples/: praison_echo.py
axcp-extension-praisonai/proto/: axcp.proto
axcp-extension-praisonai/py/praibridge/: __init__.py  bridge.py
axcp-extension-praisonai/rust/bridge/: Cargo.toml  build.rs
axcp-extension-praisonai/rust/bridge/src/: lib.rs
axcp-extension-praisonai/rust/bridge/tests/: test_roundtrip.rs
axcp-extension-praisonai/rust/tool_hook_macro/: Cargo.toml
axcp-extension-praisonai/rust/tool_hook_macro/src/: lib.rs
axcp-extension-praisonai/tests/: test_roundtrip.py  test_rust_cli.rs
bench/: encode_benchmark_test.go
bench/quic/: rtt_bench.py
charts/enterprise-node/: Chart.yaml  README.md  values.yaml
charts/enterprise-node/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
config/: dp_budget.yaml
docs/: architecture.md  privacy_enclave.md  quickstart.md  spec.md
edge/: go.work  go.work.sum
edge/gateway/: Dockerfile  go.mod  go.sum  integration_test.go  test-results.txt
edge/gateway/cmd/gateway/: main.go
edge/gateway/configs/: dp_config.json
edge/gateway/internal/: broker.go  broker_wrapper.go  buffer.go  dp_budget.go  dp_budget_test.go  dp_noise.go  dp_noise_test.go  quic_server.go  retry_buffer.go  retry_buffer_test.go  retry_metrics.go  telemetry.go
edge/gateway/internal/buffer/: bolt.go  queue.go  queue_test.go  retry.go
edge/gateway/internal/dp/: budget.go  budget_test.go  noise.go  noise_test.go
edge/gateway/internal/metrics/: .idea_reset  config.go  metrics.go  metrics_test.go  multi_metrics.go  opentelemetry_metrics.go  otel.go  prometheus.go  prometheus_test.go
edge/internal/pb/: axcp.pb.go
edge/rpi-agent/: README.md  axcp-agent.service  build.sh  config.yaml  go.mod  go.sum
edge/rpi-agent/cmd/agent/: main.go  main_test.go
edge/rpi-agent/internal/axcp/: capability.go  envelope.go  marshal.go
edge/rpi-agent/internal/netquic/: client.go  datagram.go  stream.go
edge/rpi-agent/internal/pb/: axcp.pb.go
edge/rpi-agent/scripts/: gen_proto.ps1  generate_proto.ps1
enterprise/: README.md
enterprise/edge/gateway/internal/metrics/: README.md  interface.go  metrics.go  prometheus.go
enterprise/gateway/: README.md
enterprise/helm/: README.md
enterprise/secure/: README.md
enterprise/secure/config/: pii_schema.yaml
enterprise/secure/telemetry/: handler.go  pii_filter.go  signer.go  telemetry_test.go
enterprise/secure/telemetry/cmd/server/: main.go
examples/context_patch_samples/: patch_add_replace.json
examples/edge_cloud_demo/: trace_001.json
examples/go/simple_chat/: NOTES.md  README.md  go.mod  go.sum  main.go
examples/go/simple_chat_temp/: go.mod
examples/go/temp_simple_chat2/: go.mod
gateway/: mcp_bridge.py
gateway/samples/: a2a_gemini_task.json  mcp_claude_search.json
proto/: __init__.py  axcp.proto  axcp_pb2.py
scripts/: test_bridge_roundtrip.py  test_datagram_loss.py  test_delta_merge.py  test_dp_scale.py  test_gateway_hard.py  test_negotiation.py  test_profile.py
sdk/go/: README.md  go.mod  go.sum
sdk/go/axcp/: capability.go  doc.go  envelope.go  go.mod  go.sum  telemetry.go  telemetry.proto  telemetry_test.go  types.go
sdk/go/axcp/internal/pb/: axcp.pb.go  telemetry.pb.go
sdk/go/axcp/pb/: export.go
sdk/go/axcp/sdk/go/axcp/: telemetry.pb.go
sdk/go/axcp/sdk/go/axcp_local/: telemetry.pb.go
sdk/go/bench/: encode_benchmark_test.go  go.mod  go.sum
sdk/go/bench/codec/: codec_bench_test.go
sdk/go/dp/: budget.go  dp_test.go  go.mod  noise.go
sdk/go/examples/telemetry_example/: README.md  go.mod  main.go
sdk/go/internal/pb/: axcp.pb.go  go.mod  go.sum
sdk/go/netquic/: client.go  datagram.go  doc.go  go.mod  go.sum  stream.go  tls.go
sdk/go/pb/: go.mod  go.sum  wrapper.go
sdk/go/test/: roundtrip_test.go
sdk/rust/: Cargo.toml  LICENSE  README.md
sdk/rust/src/: client.rs  error.rs  lib.rs  models.rs  telemetry.rs
spec/: appendix_c_interop.md  axcp-v0.1.md  axcp-v0.2.md  axcp-v0.3-draft.md
test/: edge_gw_smoke_test.py  go.mod  go.sum  gw_datagram_noise_test.py  mock_quic_server.py  netquic_ping_test.go
tests/dp/: gen_noise.go  test_budget.py  test_noise_stats.py
tests/dp/golden/: gaussian_mean_var.json  laplace_mean_var.json
tools/dpctl/: budget.go  go.mod  go.sum  main.go
v0.3/compose/: docker-compose.yml
v0.3/dp/runtime/: dp_lib.go
v0.3/dp/tests/: dp_compliance_test.py
v0.3/edge/gateway/: Dockerfile  main.go
v0.3/edge/gateway/config/: gateway-config.yaml
v0.3/edge/mqtt/: mosquitto.conf
v0.3/rust/axcp-rs/: Cargo.toml
v0.3/rust/axcp-rs/src/: lib.rs
v0.3/telemetry/otel/: otel-config.yaml
